[gd_scene load_steps=5 format=2]

[ext_resource path="res://systems/Lobby/Connector.gd" type="Script" id=1]
[ext_resource path="res://systems/Lobby/InfoPopup.gd" type="Script" id=2]
[ext_resource path="res://fonts/176MKA.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_char = 3
font_data = ExtResource( 3 )

[node name="Connector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0431373, 0.054902, 0.262745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="Button" parent="."]
margin_left = 243.0
margin_top = 295.0
margin_right = 371.0
margin_bottom = 327.0
text = "Connect"

[node name="HostButton" type="Button" parent="."]
margin_left = 663.0
margin_top = 295.0
margin_right = 791.0
margin_bottom = 327.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inputs" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NickLabel" type="Label" parent="Inputs"]
margin_left = 463.0
margin_top = 140.0
margin_right = 531.0
margin_bottom = 154.0
text = "Nickname:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NickInput" type="LineEdit" parent="Inputs"]
margin_left = 463.0
margin_top = 156.0
margin_right = 591.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="Inputs"]
margin_left = 243.0
margin_top = 228.0
margin_right = 283.0
margin_bottom = 242.0
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPInput" type="LineEdit" parent="Inputs"]
margin_left = 243.0
margin_top = 241.0
margin_right = 371.0
margin_bottom = 265.0
text = "127.0.0.1"

[node name="ColorLabel" type="Label" parent="Inputs"]
margin_left = 463.0
margin_top = 201.0
margin_right = 503.0
margin_bottom = 215.0
text = "Color:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPickerButton" parent="Inputs"]
margin_left = 463.0
margin_top = 218.0
margin_right = 591.0
margin_bottom = 259.0
color = Color( 1, 0.0117647, 0.0117647, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPopup" type="PopupPanel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="InfoLabel" type="Label" parent="InfoPopup"]
modulate = Color( 1, 0.129412, 0.129412, 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 174.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "This is Info!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="InfoPopup"]
one_shot = true
[connection signal="pressed" from="ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="popup_hide" from="InfoPopup" to="InfoPopup" method="_on_InfoPopup_popup_hide"]
[connection signal="timeout" from="InfoPopup/Timer" to="InfoPopup" method="_on_Timer_timeout"]
